# This is the full fwbackups changelog, with detailed listing of changes between
# various versions dating all the way back from the very beginning.
|| Version 1.43.8 changes ||
  * Sat Jan 7 2022 Stewart Adam <s.adam at diffingo.com>
    - Update to GTK 4 and Python 3
    - Migrate to adwaita iconography and widgets
    - Remove tray icon, use system notifications instead

|| Version 1.43.7 changes ||
  * Tue Dec 26 2017 Stewart Adam <s.adam at diffingo.com>
    - Fix issue where exported sets could crash on import
    - Fix issue where disabled sets still ran from cron
    - Add -f/--force flag to fwbackups-run to run disabled sets
    - Update translations from upstream
    - Migrate documentation to Markdown
    - Add technical documentation on application data and CLI

|| Version 1.43.6 changes ||
  * Wed Jan 13 2016 Stewart Adam <s.adam at diffingo.com>
    - Fix and add localization
    - Install hicolor icons
    - Other minor modifications

|| Version 1.43.5 changes ||
  * Sun Oct 4 2015 Stewart Adam <s.adam at diffingo.com>
    - Update translation framework to use GNU Gettext (removal of dependency on
      Glib M4 macros)
    - Fix an issue where diacritics in the month's name would cause a traceback
    - Fix an issue where crontab entires that included comments or aliases
      (e.g. @daily) with multiple words could cause an error while saving
    - Adjust crontab write procedures to pass a crontab file directly (instead
      of writing the contents to the stdin of a custom wrapper script set to the
      EDITOR or VISUAL variable)
    - Remove defunct igemacintegration in favor of gtkosx_application (see
      https://wiki.gnome.org/Projects/GTK%2B/OSX/Integration)
    - Customizable temporary folder (for those with tmpfs)
    - Fix replacement of [destination] token

|| Version 1.43.4 changes ||
  * Sun Dec 19 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem were upgrading to 1.43.3 could cause the crontab to be