@@ -33,6 +33,7 @@
   <url type="bugtracker">https://github.com/stewartadam/fwbackups/issues</url>
 	<content_rating type="oars-1.1" />
   <releases>
+    <release date="2023-06-26" version="1.43.8-rc2" />
     <release date="2023-01-17" version="1.43.8-rc1" />
   </releases>
   <categories>
