@@ -52,6 +52,9 @@ or from the contents of an external folder or archive.
 %{python3_sitelib}/%{name}/
 
 %changelog
+* Mon Jun 26 2023 Stewart Adam <s.adam at diffingo.com> - 1.43.8~rc2-1
+- Update to 1.43.8-rc2
+
 * Tue Jan 17 2023 Stewart Adam <s.adam at diffingo.com> - 1.43.8~rc1-1
 - Update to 1.43.8-rc1 (GTK 4 and Python 3)
 
